--- a/samples/extensions/subgroups_operations/CMakeLists.txt
+++ b/samples/extensions/subgroups_operations/CMakeLists.txt
@@ -29,4 +29,7 @@ add_sample(
     "subgroups_operations/ocean.vert"
     "subgroups_operations/ocean.frag"
     "subgroups_operations/ocean_fft.comp"
-    "subgroups_operations/butterfly_precomp.comp")
+    "subgroups_operations/butterfly_precomp.comp"
+    "subgroups_operations/butterfly_fft.comp"
+    "subgroups_operations/butterfly_inversion.comp"
+)
